--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "umd:main": "./dist/custom-errors.umd.js",
     "iife:main": "./dist/custom-errors.iife.js",
     "browser": "./dist/index.js",
+    "exports": {
+        "import": "./dist/index.js",
+        "require": "./dist/custom-errors.cjs.js"
+    },
     "scripts": {
-        "build": "rollup -c rollup.config.js",
-        "lint": "eslint \"./**/*.{js,ts,tsx}\" --fix"
+        "emit-dts": "dts-bundle-generator --project tsconfig.json --out-file ./dist/index.d.ts ./src/index.ts",
+        "build:bundle": "rollup -c rollup.config.js",
+        "build": "npm run emit-dts && npm run build:bundle",
+        "lint": "eslint \"./**/*.{js,ts,tsx}\"",
+        "lint:fix": "eslint \"./**/*.{js,ts,tsx}\" --fix"
     },
     "repository": {
         "type": "git",
@@ -27,23 +34,21 @@
     "author": "42px",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.12.13",
-        "@babel/plugin-proposal-optional-chaining": "^7.12.13",
-        "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-        "@babel/plugin-transform-runtime": "^7.12.15",
-        "@babel/preset-env": "^7.12.13",
-        "@babel/preset-typescript": "^7.12.13",
-        "@babel/runtime": "^7.12.13",
-        "@typescript-eslint/eslint-plugin": "^4.14.2",
-        "@typescript-eslint/parser": "^4.14.2",
-        "babel-plugin-module-resolver": "^4.1.0",
-        "eslint": "^7.19.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "rollup": "^2.38.5",
-        "rollup-plugin-babel": "^4.4.0",
+        "@babel/core": "^7.16.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-typescript": "^7.16.0",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.0.6",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.6.0",
+        "@typescript-eslint/parser": "^5.6.0",
+        "dts-bundle-generator": "^6.2.0",
+        "eslint": "^8.4.1",
+        "rollup": "^2.61.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.29.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.5.3"
     },
     "files": [
         "dist"
