--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,12 @@
 {
     "compilerOptions": {
         "target": "es2019",
-        "sourceMap": true,
-        "baseUrl": "src",
-        "strict": true,
-        "outDir": "./dist",
-        "declaration": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true,
         "module": "es2015",
         "moduleResolution": "node",
-        "paths": {
-            "@/*": [
-                "./src/*"
-            ],
-        },
-    },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ],
+        "baseUrl": "./src",
+        "strict": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true
+    }
 }
