--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2019",
-        "module": "es2015",
+        "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "node",
         "baseUrl": "./src",
         "strict": true,
